--- a/bubble-wrap-style-more-labels.yaml
+++ b/bubble-wrap-style-more-labels.yaml
@@ -441,12 +441,12 @@ textures:
         sprites:
             # define sprites: [x origin, y origin, width, height]
             'US:CA-1char': [350, 694, 82, 90]
-            'US:CA-2char': [826, 694, 92, 92]
+            'US:CA-2char': [826, 694, 94, 94]
             'US:CA-3char': [706, 694, 112, 92]
             'US:CA-4char': [574, 694, 124, 92]
             'US:CA-5char': [438, 694, 128, 92]
             'US:I-1char': [686, 790, 90, 100]
-            'US:I-2char': [288, 894, 100, 100]
+            'US:I-2char': [286, 894, 102, 100]
             'US:I-3char': [148, 894, 134, 100]
             'US:I-4char': [0, 894, 140, 100]
             'US:I-5char': [784, 790, 152, 100]
@@ -460,14 +460,15 @@ textures:
             'US:PA-3char': [264, 602, 112, 88]
             'US:PA-4char': [136, 602, 120, 88]
             'US:PA-5char': [0, 602, 128, 88]
-            'US:US-1char': [480, 790, 88, 94]
+            'US:US-1char': [480, 790, 88, 96]
             'US:US-2char': [576, 790, 104, 94]
-            'US:US-3char': [336, 790, 138, 100]
+            'US:US-3char': [336, 790, 136, 100]
             'US:US-4char': [172, 790, 158, 100]
             'US:US-5char': [0, 792, 164, 98]
             airport: [870, 0, 38, 38]
             aerodrome: [870, 0, 38, 38]
             aquarium: [870, 204, 38, 38]
+            arrow: [596, 246, 38, 38]
             atm: [46, 204, 38, 38]
             bakery: [686, 204, 38, 38]
             bank: [92, 204, 38, 38]
@@ -501,11 +502,11 @@ textures:
             camp_site: [828, 84, 38, 38]
             summer_camp: [828, 84, 38, 38]
             caravan_site: [828, 84, 38, 38]
-            capital-l: [726, 246, 32, 32]
-            capital-m: [694, 246, 24, 24]
-            capital-s: [666, 246, 20, 20]
-            capital-xl: [814, 246, 40, 40]
-            capital-xs: [642, 246, 16, 16]
+            capital-l: [772, 246, 32, 32]
+            capital-m: [740, 246, 24, 24]
+            capital-s: [710, 246, 20, 20]
+            capital-xl: [860, 246, 40, 40]
+            capital-xs: [688, 246, 16, 16]
             car: [908, 126, 38, 38]
             category-namespace-mobility: [908, 126, 38, 38]
             category-predicate-mobility: [908, 126, 38, 38]
@@ -562,14 +563,14 @@ textures:
             fuel: [90, 246, 38, 38]
             gallery: [778, 204, 38, 38]
             garden: [690, 84, 38, 38]
-            generic: [596, 246, 38, 38]
-            category-namespace-other: [596, 246, 38, 38]
-            category-predicate-addressing: [596, 246, 38, 38]
-            generic_shield-1char: [928, 290, 72, 72]
-            generic_shield-2char: [488, 422, 98, 72]
-            generic_shield-3char: [348, 422, 132, 72]
-            generic_shield-4char: [188, 422, 152, 72]
-            generic_shield-5char: [0, 422, 180, 72]
+            generic: [642, 246, 38, 38]
+            category-namespace-other: [642, 246, 38, 38]
+            category-predicate-addressing: [642, 246, 38, 38]
+            generic_shield-1char: [0, 422, 72, 72]
+            generic_shield-2char: [568, 422, 98, 72]
+            generic_shield-3char: [428, 422, 132, 72]
+            generic_shield-4char: [268, 422, 152, 72]
+            generic_shield-5char: [80, 422, 180, 72]
             gift: [138, 126, 38, 38]
             golf_course: [414, 84, 38, 38]
             government: [276, 204, 38, 38]
@@ -658,11 +659,11 @@ textures:
             kindergarten: [552, 84, 38, 38]
             category-namespace-education_and_religion: [552, 84, 38, 38]
             category-predicate-education: [552, 84, 38, 38]
-            sdk_shield-1char: [592, 422, 84, 84]
+            sdk_shield-1char: [672, 422, 84, 84]
             sdk_shield-2char: [328, 510, 112, 84]
             sdk_shield-3char: [176, 510, 144, 84]
             sdk_shield-4char: [0, 510, 168, 84]
-            sdk_shield-5char: [684, 422, 192, 84]
+            sdk_shield-5char: [764, 422, 192, 84]
             shoemaker: [552, 42, 38, 38]
             ski: [450, 126, 38, 38]
             winter_sports: [450, 126, 38, 38]
@@ -687,31 +688,31 @@ textures:
             theme_park: [0, 126, 38, 38]
             amusement_ride: [0, 126, 38, 38]
             toilets: [874, 84, 38, 38]
-            townspot-l: [132, 288, 32, 32]
-            townspot-l-rev: [942, 246, 32, 32]
-            townspot-m: [100, 288, 24, 24]
-            townspot-m-rev: [910, 246, 24, 24]
-            townspot-s: [72, 288, 20, 20]
-            townspot-s-rev: [882, 246, 20, 20]
-            townspot-xl: [172, 288, 40, 40]
-            townspot-xl-rev: [0, 290, 40, 40]
-            townspot-xs: [48, 288, 16, 16]
-            townspot-xs-rev: [862, 246, 12, 12]
+            townspot-l: [172, 290, 32, 32]
+            townspot-l-rev: [0, 292, 32, 32]
+            townspot-m: [140, 290, 24, 24]
+            townspot-m-rev: [956, 246, 24, 24]
+            townspot-s: [112, 290, 20, 20]
+            townspot-s-rev: [928, 246, 20, 20]
+            townspot-xl: [212, 290, 40, 40]
+            townspot-xl-rev: [40, 292, 40, 40]
+            townspot-xs: [88, 290, 16, 16]
+            townspot-xs-rev: [908, 246, 12, 12]
             toys: [916, 0, 38, 38]
             traffic_signals: [46, 246, 38, 38]
             train_station: [410, 0, 38, 38]
             station: [410, 0, 38, 38]
             train: [410, 0, 38, 38]
             category-predicate-transport: [410, 0, 38, 38]
-            ux-current-location: [514, 290, 88, 88]
-            ux-locate-off: [848, 290, 72, 72]
-            ux-locate-on: [768, 290, 72, 72]
-            ux-route-arrow: [220, 290, 128, 128]
-            ux-route-start: [434, 290, 72, 92]
-            ux-route-stop: [356, 290, 72, 92]
-            ux-search-active: [608, 290, 72, 108]
-            ux-search-inactive: [688, 290, 72, 108]
-            ux-transit-stop: [766, 248, 42, 36]
+            ux-current-location: [554, 290, 88, 88]
+            ux-locate-off: [888, 290, 72, 72]
+            ux-locate-on: [808, 290, 72, 72]
+            ux-route-arrow: [260, 290, 128, 128]
+            ux-route-start: [474, 290, 72, 92]
+            ux-route-stop: [396, 290, 72, 92]
+            ux-search-active: [648, 290, 72, 108]
+            ux-search-inactive: [728, 290, 72, 108]
+            ux-transit-stop: [812, 248, 42, 36]
             veterinary: [138, 0, 38, 38]
             viewpoint: [824, 204, 38, 38]
             category-namespace-do_and_see: [824, 204, 38, 38]
