removed stroke shield text, neighborhood label refactor

--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -2765,7 +2765,8 @@ layers:
                         font:
                             family: Montserrat
                             fill: [0.308,0.308,0.308]
-                            size: [[7,7px],[12,8px],[15,11px]]
+                            size: [[7, 7px], [12, 8px], [15, 11px]]
+                            stroke: { color: global.text_stroke, width: 0px }
 
             default_priority_highway:
                 filter:
@@ -4597,17 +4598,20 @@ layers:
         #
         neighbourhood:
             filter:
-                kind:
-                    - macrohood
-                    - neighbourhood
-                    - borough
-                $zoom: { min: 10 }
-                is_landuse_aoi: false
+                all:
+                    - kind:
+                        - borough
+                        - macrohood
+                        - neighbourhood
+                        #- microhood       # until Tenderloin microhoods are cleaned up, ban this placetype
+                    - $zoom: { min: 10, max: 17 }
+                    - is_landuse_aoi: false
+                    - function() { return (feature.min_zoom <= ($zoom+0.5) && feature.max_zoom >= ($zoom+1)) }
             draw:
                 text-blend-order:
                     # there are more labels than we want to show, so we hide them,
                     # then selectively reveal in classes below (ultimately a data problem)
-                    visible: false
+                    visible: global.text_visible_neighbourhoods_e
                     priority: 29
                     buffer: 8px
                     text_wrap: 10
@@ -4615,89 +4619,43 @@ layers:
                     font:
                         family: Varela
                         fill: [0.225,0.561,0.415]
+                        size: [[11, 9px], [14, 12px], [16, 18px]]
                         transform: uppercase
-            neighborhood-z11:
+
+            z13-up:
                 filter:
-                    $zoom: [11]
-                    min_zoom: [11]
-                    max_zoom: { min: 12 }
-                    #kind_tile_rank: { max: 6 }
+                    $zoom: { min: 13 }
                 draw:
                     text-blend-order:
-                        visible: global.text_visible_neighbourhoods_e
                         font:
-                            size: 9px
-                            stroke: { color: global.text_stroke, width: 4 }
-            neighborhood-z12:
-                filter:
-                    $zoom: [12]
-                    min_zoom: [11,12]
-                    max_zoom: { min: 13 }
-                    #kind_tile_rank: { max: 8 }
-                draw:
-                    text-blend-order:
-                        visible: global.text_visible_neighbourhoods_e
-                        font:
-                            size: 10px
-            neighborhood-z13:
-                filter:
-                    $zoom: [13]
-                    min_zoom: [11,12,13]
-                    max_zoom: { min: 14 }
-                    kind_tile_rank: { max: 8 }
-                draw:
-                    text-blend-order:
-                        visible: global.text_visible_neighbourhoods_e
-                        font:
-                            size: 11px
-            neighborhood-z14:
-                filter:
-                    $zoom: [14]
-                    min_zoom: [11,12,13,14]
-                    max_zoom: { min: 15 }
-                    kind_tile_rank: { max: 8 }
-                draw:
-                    text-blend-order:
-                        text_wrap: 12
-                        max_lines: 3
-                        visible: global.text_visible_neighbourhoods
-                        font:
-                            size: 12px
-            neighborhood-z15:
-                filter:
-                    $zoom: [15]
-                    min_zoom: [11,12,13,14,15]
-                    max_zoom: { min: 16 }
-                    kind_tile_rank: { max: 8 }
-                draw:
-                    text-blend-order:
-                        text_wrap: 12
-                        max_lines: 4
-                        visible: global.text_visible_neighbourhoods
-                        font:
-                            size: 14px
-                z15-new:
+                            weight: 300
+
+                low_quality_kind_tile_rank:
                     filter:
-                        all:
-                            - min_zoom: 15
+                        kind_tile_rank: { min: 8 }
                     draw:
                         text-blend-order:
-                            priority: 19
-                            font:
-                                size: 13px
-            neighborhood-z16:
-                filter:
-                    $zoom: [16]
-                    min_zoom: [11,12,13,14,15,16]
-                    max_zoom: { min: 17 }
-                    kind_tile_rank: { max: 8 }
-                draw:
-                    text-blend-order:
-                        text_wrap: 12
-                        max_lines: 4
-                        visible: global.text_visible_neighbourhoods
-                        font:
-                            size: 17px
+                            visible: false
+
+                z14-up:
+                    filter:
+                        $zoom: { min: 14 }
+                    draw:
+                        text-blend-order:
+                            text_wrap: 9
+                            visible: global.text_visible_neighbourhoods
+
+                    z15-up:
+                        filter:
+                            $zoom: { min: 15 }
+                            min_zoom: { min: 15 }
+                        draw:
+                            text-blend-order:
+                                priority: 19
+                                font:
+                                    size: 13px
+
+
     pois:
         data: { source: mapzen, layer: pois }
         #visible: global.label_visible_poi_landuse
