removing unused visibility globals

--- a/bubble-wrap-icons.yaml
+++ b/bubble-wrap-icons.yaml
@@ -22,6 +22,7 @@ styles:
 textures:
     mapzen_icon_spritesheet:
         url: images/bubble-wrap@2x.png
+        #url: https://raw.githubusercontent.com/tangrams/bubble-wrap/gh-pages/images/bubble-wrap%402x.png
         filtering: mipmap
         sprites:
             # define sprites: [x origin, y origin, width, height]
