--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -226,7 +226,6 @@ global:
     text_visible_address:           false     # false for default
     text_visible_water_labels:      true
     text_visible_island:            true
-    label_visible_landuse_green:    true
     icon_visible_landuse_green:     true     # needs work
     text_visible_landuse_green:     true
     icon_size_green:                [[0, '0px']]    # 0px for no, default, more  [[13, 14px], [16, 18px], [18, 19px]]
@@ -235,18 +234,13 @@ global:
     label_visible_poi_landuse:      true
     icon_visible_poi_landuse:       false     # false for default
     text_visible_poi_landuse:       false     # false for default
-    label_visible_poi_landuse_e:    true
     icon_visible_poi_landuse_e:     false     # false for default
-    text_visible_poi_landuse_e:    true
     text_visible_landuse_generic:   false     # false for default
-    label_visible_station:          false     # false for default
     icon_visible_station:           false     # false for default
     text_visible_station:           false     # false for default
     text_visible_highway:           true
-    text_visible_highway_e:         false     # false for default, false for more
     text_visible_trunk_primary:     true
     text_visible_trunk_primary_route: true        # true by default
-    text_visible_trunk_primary_e2:  false     # false for default, false for more
     text_visible_trunk_primary_e:   false     # false for default, false for more
     text_visible_secondary:         true
     text_visible_secondary_e:       false     # false for default, false for more
@@ -262,7 +256,6 @@ global:
     text_visible_airport_gate:      true
     sdk_road_shields:               true
     text_visible_exits:             true
-    text_visible_exits_e:           false     # false for default, false for more
     #
     #label styling
     text_fill: [0.300, 0.300, 0.300]         # BLACK
@@ -3420,7 +3413,7 @@ layers:
                     width: [[13,0px],[14,0.5px],[15, 1px], [16, 1.5px], [18, 3m]]
                 text-blend-order:
                     priority: 60
-                    visible: true
+                    visible: global.text_visible_piste
                     font:
                         fill: global.text_fill_piste
                         size: 12px
