--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -456,6 +456,12 @@ fonts:
         - weight: normal
           #url: https://fonts.gstatic.com/s/montserrat/v7/zhcz-_WihjSQC0oHJ9TCYL3hpw3pgy2gAi-Ip7WPMi0.woff
           url: fonts/Montserrat-Regular.woff
+        - weight: 500
+          #url: https://fonts.gstatic.com/s/montserrat/v10/BYPM-GE291ZjIXBWrtCweqLy3K7m9xj_O5xwN3SdQNs.woff
+          url: fonts/Montserrat-Medium.woff
+        - weight: 700
+          #url: https://fonts.gstatic.com/s/montserrat/v10/IQHow_FEYlDC4Gzy_m8fcnbFhgvWbfSbdVg11QabG8w.woff
+          url: fonts/Montserrat-Bold.woff
     Varela:
         - weight: normal
           #url: https://fonts.gstatic.com/s/varela/v7/maB5vWJo0EAVzvHPjBkLM-vvDin1pK8aKteLpeZ5c0A.woff
@@ -2467,6 +2473,7 @@ layers:
                             }
                         font:
                             family: Montserrat
+                            weight: 500
                             fill: [0.308,0.308,0.308]
                             size: [[7, 7px], [12, 8px], [15, 11px]]
                             stroke: { color: global.text_stroke, width: 0px }
@@ -5672,8 +5679,9 @@ layers:
                         font:
                             family: Montserrat
                             fill: function() { if(feature.colour == 'yellow') { return '#555'; } else { return 'white'; } }
-                            style: bold
+                            weight: 700
                             size: [[7,7px],[12,8px],[16,11px]]
+                            stroke: { width: 0px }
 
             width_1char:
                 filter: function() { return (feature.ref.length === 1); }
