--- a/themes/label-6.yaml
+++ b/themes/label-6.yaml
@@ -73,7 +73,7 @@ layers:
                 all:
                     - { $zoom: { min: 19 } }
                     - $geometry: point
-                    - kind_detail: [university, college, school, kindergarten]
+                    - landuse_kind: [university, college, school, kindergarten]
                     - function() { return global.text_visible_building; }
                 any:
                     - { $zoom: [17], area: { min: 3000 }, name: true }
