--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -1,7 +1,7 @@
 Author: Geraldine Sarmiento, Nathaniel V. Kelso, Patricio Gonzalez Vivo, Brett Camper, Peter Richardson
 
 import:
-    - bubble-wrap-icons.yaml
+    - themes/bubble-wrap-icons.yaml
 
 global:
     # Sign up for a Mapzen API key to enjoy higher rate limits
