--- a/themes/bubble-wrap-icons.yaml
+++ b/themes/bubble-wrap-icons.yaml
@@ -1,12 +1,30 @@
+global:
+    # To allow standalone icon use let's define core terms that
+    # are otherwise defined in the root {style}-style.yaml,
+    # themes/color-{theme}.yaml or themes/label-{step} files.
+    # This also means {style}-icons.yaml should be imported first.
+    icon_size:          [[13, '14px'], [16, '18px'], [18, '19px']]
+    text_font_family:   'Quicksand'
+    #black_color:        [0.00,0.00,0.00]
+    #dark_color:         [0.250,0.250,0.250]
+    #white_color:        [1.00,1.00,1.00]
+    text_stroke:        [0.870,0.870,0.870]
+
+    # To make Refill's colorize-able icons play nice with other styles.
+    # Bubble Wrap defaults to "" null (don't color). If colorized icons are desired
+    # than set sdk_icon_color_style property value to "colorized_icons",
+    # or import the Refill color theme *after* Bubble Wrap icons
+    sdk_icon_color_style:
+
 styles:
     mapzen_icon_library:
         base: points
         texture: mapzen_icon_library
         # To make Refill's colorize-able icons play nice with other styles
-        mix:             # intentionally blank, is parsed as null (no mix)
+        mix: global.sdk_icon_color_style
         blend_order: 1
         draw:
-            size: [[13, 14px], [16, 18px], [18, 19px]]
+            size: global.icon_size
             sprite: function() { return feature.kind; }
             sprite_default: generic
             buffer: 3px
@@ -15,7 +33,7 @@ styles:
                 text_wrap: 18
                 max_lines: 3
                 font:
-                    family: Quicksand
+                    family: global.text_font_family
                     weight: normal
                     fill: [0.20,0.20,0.20]
                     size: [[13,10px],[14,11px],[17,12px],[19,12px],[20,14px]]
